<resources>
    <string name="app_name">Wintec Waiata</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_01">Waiata</string>
    <string name="fragment_02">Marae</string>

    <string name="act_carving_title">Carvings</string>


    <!-- activity_carving / activity_carving_info  -->
    <string name="text_carving_01">Carving 01</string>
    <string name="text_carving_02">Carving 02</string>
    <string name="text_carving_03">Carving 03</string>
    <string name="text_carving_04">Carving 04</string>
    <string name="text_carving_05">Carving 05</string>
    <string name="text_carving_06">Carving 06</string>
    <string name="text_carving_07">Carving 07</string>

    <string name="text_info_carving_01">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_02">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_03">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_04">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_05">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_06">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>
    <string name="text_info_carving_07">Nam volutpat mollis pulvinar. Sed quis dui massa. Vivamus blandit interdum interdum. Vivamus tincidunt fermentum turpis non sagittis.</string>

    <!-- activity_about  -->
    <string name="about">We are students of Waikato Institute of Technology completing our final year of Software Engineering. This app is dedicated to educating students, tutors and the general public on Wintec\'s Culture and Customs. Our team has put tremendous effort into making this possible and being our first time collaborating in a mobile development. This has bought many challenges on and insights to development. The team put our strengths and skills together to proudly present this app.</string>
</resources>
