<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/waiataFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".WaiataFragment">

    <RelativeLayout
        android:id="@+id/heading_title"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_back_black">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="134dp"
            android:layout_marginLeft="134dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/act_carving_title"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="4"
        >

        <!-- //row 1
         //Column 1-->

        <RelativeLayout
            android:id="@+id/CarvingList"
            android:layout_width="wrap_content"
            android:layout_height="620dp"
            android:layout_below="@id/heading_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_back">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="618dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/carving_01"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_1"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_01"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/text_carving_01"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_02"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_02"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_02"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/text_carving_02"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_03"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_03"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_03"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/text_carving_03"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_04"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_04"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_04"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/text_carving_04"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_05"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_05"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_05"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="@string/text_carving_05"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_06"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_06"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_06"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="Waiata 1"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/carving_07"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wintec_marae">

                        <RelativeLayout
                            android:id="@+id/title_carving_07"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/act_box">

                            <TextView
                                android:id="@+id/text_carving_07"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:fontFamily="@font/poppins_bold"
                                android:gravity="center_horizontal"
                                android:text="Waiata 1"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="18dp" />


                        </RelativeLayout>

                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>




    </GridLayout>


</LinearLayout>